--- a/salt_challenge.ipynb
+++ b/salt_challenge.ipynb
@@ -114,8 +114,8 @@
     "    dtype = np.float32\n",
     ")\n",
     "\n",
-    "print(X.shape)\n",
-    "print(y.shape)"
+    "#print(X.shape)\n",
+    "#print(y.shape)"
    ]
   },
   {
